--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 	</div>
 	<div>
 		<button id="modal">Click me</button>
-		<button id="modal1">Click me</button>
 	</div>
 	<div>
 		<button class="notice-1">Click me</button>
@@ -24,7 +23,7 @@
 		<button class="notice-3">Click me</button>
 		<button class="notice-4">Click me</button>
 	</div>
-	<script src="js/jQuery-1.11.3.min.js"></script>
+	<script src="js/jquery-1.11.3.min.js"></script>
 	<script src="js/jBox.min.js"></script>
 	<script src="./Notice/jBox.Notice.min.js"></script>
 	<script>
