second commit jBox modified index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<button id="modal">Click me</button>
 	</div>
 	<div>
-		<p>以下按钮可重复点击</p>
+		<p>以下按钮可重复点击。</p>
 		<button class="notice-1">Click me</button>
 		<button class="notice-2">Click me</button>
 		<button class="notice-3">Click me</button>
